# ai-consulting-platform

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  dashboard.json  pyproject.toml  railway.json  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  dashboard.py
app/api/: main.py
app/core/: ai_pipeline.py  config.py  reliability.py
app/models/: forecasting.py
ingestion/shopify/: connector.py
tests/: test_ai_pipeline.py
